App: Prevent content from jumping when scrollbar appears

--- a/app/src/assets/styles/main.scss
+++ b/app/src/assets/styles/main.scss
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+html {
+  // prevent scroll bar from hiding when content is <page height. this
+  // prevents content "jumping" horizontally on page load
+  overflow-y: scroll;
+}
+
 body {
   font-family: 'Work Sans', sans-serif;
   font-size: 16px;
